Restructure and fix nav on mobile (again)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,6 +9,13 @@ body {
     flex-direction: column;
     align-items: center;
 }
+canvas { 
+    display: block; 
+    position: fixed; 
+    top: 0; 
+    left: 0; 
+    z-index: -1; 
+}
 h1 {
     font-size: 3em;
     background: linear-gradient(0deg, #00eeff, #ff00ff);
@@ -52,6 +59,13 @@ summary {
     cursor: pointer;
     outline: none;
     text-align: center;
+}
+.content {
+    position: relative;
+    z-index: 1;
+    text-align: center;
+    color: white; /* Ensure your text is visible on the dark background */
+    padding: 20px;
 }
 .details-content {
     text-align: center; /* Center-align content */
